src/test/ui/nll/ty-outlives/projection-no-regions-fn.stderr
warning: not reporting region error due to -Znll
  --> $DIR/projection-no-regions-fn.rs:24:5
   |
24 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

warning: not reporting region error due to -Znll
  --> $DIR/projection-no-regions-fn.rs:40:5
   |
40 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

error: `<T as std::iter::Iterator>::Item` does not outlive `'_#4r`
  --> $DIR/projection-no-regions-fn.rs:24:5
   |
24 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

error: `<T as std::iter::Iterator>::Item` does not outlive `'_#5r`
  --> $DIR/projection-no-regions-fn.rs:40:5
   |
40 |     Box::new(x.next())
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

